[package]
name = "ex_merge_sort"
version = "0.3.1"
authors = ["winebarrel <sugawara@winebarrel.jp>"]
edition = "2018"
license = "MIT"
description = "Rust external merge sort library"
repository = "https://github.com/winebarrel/ex_merge_sort"
documentation = "https://docs.rs/ex_merge_sort/"
readme = "README.md"

[dependencies]
tempfile = "3"
